--- a/src/App.css
+++ b/src/App.css
@@ -13,26 +13,33 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+div {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: rgb(10, 13, 66);
+  width: 100vw;
+  height: 100vh;
+}
+
+img {
+  display: flex;
+  width: 50vw;
+  height: 90vh;
+  object-fit:contain;
+}
+
+input {
+  color: #0099CC;
+  background: transparent;
+  border: 2px solid #0099CC;
+  border-radius: 6px;
+  padding:2px;
+  margin-top: 1rem
+}
+
+input:hover{
+  background-color: #008CBA;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
